--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <br>
       <iframe src="https://trinket.io/embed/python3/f674c5b8a1?outputOnly=true&runOption=run" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
       <br>
-      <p>Scratch version <a href="https://cdn2.scratch.mit.edu/get_image/project/419196507_100x80.png">here</a></p>
+      <p>Scratch version <a href="https://scratch.mit.edu/projects/419196507/">here</a></p>
     </center>
   </body>
 </html>
