--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Duplicate Message Generator</title>
   </head>
-  <body>
+  <body style="color: white; font-family: Arial; background-color: black>
     <center>
       <br>
       <h2>Duplicate Message Generator – Python Edition</h2>
