--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
       <h3>This is the web version of the duplicate message generator. You can run the code locally as well. <a style="color:powderblue" href="https://github.com/leahcimto/dupe-message-generator">Here is a link to the code</a></h3>
       <p>Ok here it is</p>
       <br>
-      <iframe src="https://trinket.io/embed/python3/f674c5b8a1?outputOnly=true&runOption=run" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
-      <br>
+      <iframe src="https://trinket.io/embed/python3/fb02ed4784?outputOnly=true&runOption=run" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>      <br>
       <p>Scratch version <a style="color:powderblue" href="https://scratch.mit.edu/projects/419196507/">here</a></p>
     </center>
   </body>
